--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -3,19 +3,17 @@ name: Run Python Script Hourly
 on:
   schedule:
     - cron: "0 * * * *"  # Runs every hour
+  workflow_dispatch:  # Allows manual execution
 
 jobs:
   run_script:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-
       - name: Run Python script
         run: python create_hello_world.py
