--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -11,9 +11,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+
       - name: Run Python script
         run: python create_hello_world.py
+
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add generated_files/
+          git commit -m "Add new Hello World file"
+          git push
