--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: Run Python Script Hourly
 
 on:
   schedule:
-    - cron: "0 * * * *"  # Runs every hour
+    - cron: "30 18 * * *"  # Runs every hour
   workflow_dispatch:  # Allows manual execution
 
 jobs:
