--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,9 @@ name: Run Python Script Hourly
 
 on:
   schedule:
-    - cron: "30 18 * * *"  # Runs 12 midnight IST 
+    - cron: "0 * * * *"  # Runs at the start of every hour (UTC)
   workflow_dispatch: 
+
 jobs:
   run_script:
     runs-on: ubuntu-latest
